apps/plan-10wk/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plan-10wk
  labels:
    app.kubernetes.io/name: plan-10wk
